--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
   },
   "dependencies": {
     "chai-spies": "^1.0.0",
+    "debug": "^4.3.4",
+    "har-validator": "^5.1.5",
+    "left-pad": "^1.3.0",
+    "mkdirp": "^3.0.1",
     "mocha-jsdom": "^2.0.0",
     "nock": "^13.3.0",
     "node-fetch": "^2.6.1",
-    "sinon": "^7.3.1"
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
+    "sinon": "^7.3.1",
+    "uuid": "^9.0.1"
   }
 }
